Reformat code to List instead of LinkedList. Check abort and releaseFile